# modelark

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  catalog_discussions.md  pyproject.toml  requirements.txt  wishlist.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
catalog/export/: README.md
contributing/: code_of_conduct.md  contributions.md
docs/: capacity-evidence.md  decision_log.md  deferred-artifact-support.md  deployment.md  fill_pipeline.md  legacy-cutover.md  roadmap.md
docs/plans/: placement-capacity-hardening.md  placement-capacity-implementor-handoff.md  reconciled-work-graph-capacity-ledger.md
docs/rfcs/: 001-migrated-runtime-acceptance.md  002-first-class-placement-approval.md
examples/selections/: README.md  fits-24gb.jsonl  flagship-llms.jsonl  frontier-giants.jsonl
modelark/: __init__.py  __main__.py  admission.py  archive_hash.py  archive_manifest.py  budgets.py  candidates.py  capacity.py  capacity_evidence.py  cli.py  compress.py  compress_worker.py  default_wishlist.yaml  discover.py  download_worker.py  drive_bootstrap.py  drive_fence.py  drive_mutation.py  fetch.py  fill.py  formats.py  ggufmeta.py  hash_repair.py  librarian.py  plan.py  reconcile.py  register.py  restore.py  seed.py  server.py  streamznn.py  verifier.py  verify.py  wishlist.py
modelark/core/: __init__.py  db.py  platform.py  schema.sql  telemetry.py
modelark/data/: catalog_seed.jsonl
modelark/web/: __init__.py  catalog_api.py  data.py  disk_api.py  fill_api.py  fill_worker.py  library_api.py  plan_api.py  selection_api.py  server.py  verify_api.py
modelark/web/static/: app.css  app.js  catalog.js  disk.js  fill.js  index.html  library.js  plans.js  verify.js
scripts/: __init__.py  deploy.py  migrate_duckdb_to_sqlite.py  migrate_legacy_runtime.py  modelark.service  phase3_gate_evidence.py  phase4_wheel_migration_smoke.py  reset_physical.py  setup.sh
tests/: _admission_compat.py  test_annex_metadata.py  test_annex_placeholder_recovery.py  test_archive_manifest.py  test_archive_policy.py  test_candidates.py  test_capacity.py  test_capacity_evidence.py  test_capacity_mode_api.py  test_capacity_mode_cli.py  test_catalog_v3_migration.py  test_cli_version.py  test_compress_isolation.py  test_db_sqlite.py  test_deploy.py  test_drive_bootstrap.py  test_drive_mutation_envelope.py  test_duckdb_migration.py  test_e2e_portal.py  test_fetch_resume.py  test_gate_b_tiered_v2.py  test_hash_repair.py  test_legacy_runtime_migration.py  test_library_projection.py  test_oopsie.py  test_phase3_gate_evidence.py  test_plan.py  test_pr04_admission_copied_catalog.py  test_pr04_admission_equivalence.py  test_pr04_admission_reporting.py  test_pr04_admission_seam.py  test_pr04_admission_transport.py  test_reconcile.py  test_register_safety.py  test_replan.py  test_restore.py  test_runtime_paths.py  test_seed.py  test_selection_guard.py  test_streamznn.py  (+7 more)
