[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "modelark"
version = "0.1.0"
description = "Catalog, fetch, and verify open model weights across an offline drive library."
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.29",
    "hf_transfer",
    "duckdb>=1.4",
    "pyyaml",
    "httpx",
    "zipnn==0.5.4",   # pinned: pre-1.0, compressed-at-rest archive codec (DEC-003)
]

[project.scripts]
modelark = "modelark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modelark*"]
namespaces = true

[tool.setuptools.package-data]
"modelark.core" = ["*.sql"]
